Expand configurable stage showcase.